k8s/infrastructure/object-store/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-rgw-internal
  namespace: rook-ceph
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - s3.internal.grendel71.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-rgw-ceph-objectstore
          port: 80
